--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "fastapi[standard]>=0.115.8",
     "langchain>=0.3.19",
     "langchain-ollama>=0.2.3",
+    "langchain-openai>=0.3.6",
     "pydantic>=2.10.6",
+    "python-dotenv>=1.0.1",
 ]
 
 [tool.ruff]
