refactor: make (most) mail text columns not null

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -12,7 +12,7 @@ sql:
         overrides:
           - column: "mail.body"
             go_type:
-              type: "pgtype.Text"
+              type: "string"
               pointer: true
           - column: "mail.messages"
             nullable: true
